# EventScraper

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml
docker/: Dockerfile  build and deploy.sh  clean photos.sh  entrypoint.sh  runBotCron
src/: Runner.py  db_cache.py  event_handlers.py  filter.py  jsonParser.py  logger.py
src/Drivers/Mobilizon/: GQLRequests.py  Mobilizon.py  MobilizonTypes.py
src/WebsiteScraper/: Scraper.py
src/drivers/mobilizon/: db_cache.py  gql_requests.py  mobiilizon.py  mobilizon.py  mobilizon_types.py
src/mobilizon/: api.py  gql_requests.py  mobilizon.py
src/parser/: jsonParser.py  types.py
src/parser/types/: generics.py  submission_handlers.py
src/publishers/: abc_publisher.py
src/publishers/mobilizon/: api.py  gql_requests.py  types.py  uploader.py
src/scrapers/: abc_scraper.py  google_calendar.py
src/scrapers/google_calendar/: GCal copy.json  GCal.json  api.py  scraper.py
src/scrapers/ical/: scraper.py
src/scrapers/statics/: famerMarkets.json  farmerMarkets.json  scraper.py
src/website_scraper/: GCal.json  google_calander.py  google_calendar.py  scraper.py
tests/: __init__.py  json_parser.py  manual_tests.py  runner.py  sqlite_db.py  test_json_parser.py  test_runner.py  test_sqlite_db.py
tests/scrapers/: test_ical.py
