[tool.poetry]
name = "cteventscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gql = "^3.5.0"
pydantic = "^2.7.0"
tenacity = "^8.2.3"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
