[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ezequiel Valencia"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gql = "^3.5.0"
pydantic = "^2.7.0"
tenacity = "^8.2.3"
requests-toolbelt = "^1.0.0"
google-api-python-client = "^2.127.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
geopy = "^2.4.1"
pytest = "^8.2.2"
slack_sdk = "^3.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
